@@ -1,3 +1,10 @@
+2011-11-02  Jon Lee  <jonlee@apple.com>
+
+        Fix build error from r99108.
+
+        * WebProcess/WebPage/WebPage.cpp:
+        (WebKit::WebPage::performDragControllerAction):
+
 2011-11-02  Dean Jackson  <dino@apple.com>
 
         Add ENABLE_CSS_SHADERS flag
